########################
# Set up Configuration #
########################
[metadata]
name = integra
version = 0.0.0
description = a package for merging and normalizing scores
long_description = file: README.md

url = https://github.com/AldisiRana/integra

author = Rana Aldisi
author_email = aldisi.rana@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    genetics
    scoring

[options]
install_requires =
    pandas
    tqdm
    click
    pybiomart
    matplotlib
    numpy
    scipy


zip_safe = false
python_requires = >= 3

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    integra = integra.cli:main